# bagel-datatype

./: README.md  db_config.json  pyproject.toml
src/bageldatatype/: basetype.py  database.py
tests/: test_basetype.py  test_database.py
